terraform/kubernetes/apps/platform-gateway-routes-sso/httproute-dex.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dex
  namespace: gateway-routes
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: platform-gateway
      namespace: platform-gateway
      sectionName: https
  hostnames:
    - dex.127.0.0.1.sslip.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /dex
      backendRefs:
        - group: ""
          kind: Service
          name: dex
          namespace: sso
          port: 5556
          weight: 1
